app/assets/stylesheets/main.css
/* General Page */

html {
  font-family: 'DejaVu Sans', Trebuchet, 'Trebuchet MS', Verdana, sans;
  font-size: 62.5%;
  color: white;
}

html { margin: 0; padding: 0; }
body {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  z-index: -1;
  margin: 0px;
  padding: 0px;
  font-size: 1em;
}

a, a:visited {
  text-decoration: none;
  color: white;
}

a.no_content {
  color: gray;
}

a:hover {
  color: DeepPink;
}

a.no_content:hover {
  color: #555;
}

a img { border: none; }

.hidden { display: none; }

#logo { display: block; height: 0; position: fixed; top: 0; left: 0; z-index: -1; }

.flash {
  border: solid gray 1px;
  padding: 10px;
  color: white;
  background: black;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}

#wrapper {
  margin-top: 15%;
  height: 405px;
  width: 600px;
  margin: auto;
}

#content {
  float: left;
  height: 365px;
  width: 560px;
  background: black;
}

nav.pagination {
  height: 50px;
  width: 100%;
  position: relative;
  top: 0px;
  left: 0px;
  font-size: 1.1em;
}

nav.pagination li {
  position: absolute;
  top: 18px;
}
nav.pagination #previous { left: 20px; }
nav.pagination #current { 
  width: 250px;
  position: absolute;
  left: 155px;
  text-align: center;
  font-weight: bold;
}
nav.pagination #next { right: 20px; }

.supplement {
  z-index: -1;
  background: url('http://vidusic.heroku.com/assets/attribution_bg.png');
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}

/* Video List/Archive */
.post_list ul a:visited {
  color: #999;
}
.post_list ul a:hover {
  color: DeepPink;
}
.post_list_post {
  width: 140px;
  text-align: center;
  float: left;
  padding-top: 10px;
}

.post_list_post_container {
  width: 130px;
  margin: auto;
  padding-bottom: 8px;
  border: solid gray 1px;
}

ul {
  margin: 0;
  padding: 0;
}

li { list-style-type: none; }

/* Post View */

#video_list {
  width: 535px;
  margin: 80px auto;
  height: 142px;
}

#video_container {
  display: block;
  text-align: center;
  float: left;
  width: 172px;
  height: 140px;
  margin: 0 2px;
  border: solid gray 1px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
} 

#video_container img { padding-top: 8px; }

/* Menu */
nav#main {
  position: absolute;
  top: 130px;
  left: 30px;
  width: 150px;
}
#top_menu_container {
  position: relative;
  margin: 15px;
  width: 120px;
}
#top_menu .items {
  position: relative;
  top: 3px;
  text-align: center;
  font-size: 1.2em;
  line-height: 1.6em;
}


/* Add a Video */
input {
  width: 100px;
  background: #111;
  border: solid 1px MediumOrchid;
  color: white;
}
input[ type = "radio" ] {
  width: auto;
}

label { padding-left: 7px; }
input[name = "commit"]{ border: solid 1px white; background: #555; margin-left: 60%; }
input[name = "commit"]:hover { background: #444; }
input[name = "commit"]:active { background: #111; }

/* Attribution */
#attribution {
  bottom: 10px;
  right: 10px;
  height: 90px;
  width: 140px;
  position: fixed;
  
}

#attribution_content {
  text-align: center;
  margin: auto;
  padding-top: 6px;
}

#attribution p {
  margin: 3px 0px;
}

.attr_name {
  font-size: 1.4em;
}


/******************
 * BORDERS        *
 * ***************/

.border {
  float: left;
}

.border_row {
}

/* (u)pper, (b)ottom, (m)iddle, (l)eft, (r)ight, (c)enter */
.border.u, .border.b { height: 20px; }
.border.m { height: 365px; }
.border.l, .border.r { width: 20px; }
.border.c { width: 560px; }

/* Some Small Screen Adjustments */

@media all and (max-height: 600px) and (min-width: 970px) wrapper{ #wrapper { margin-top: 0; } }
@media all and (min-height: 600px) and (max-height: 700px) and (min-width: 970px) { #wrapper { margin-top: 8%; } }
@media all and (min-height: 700px) and (max-height: 800px) and (min-width: 970px) { #wrapper { margin-top: 11%; } }

